# cashu-lnurl-signup

./: .gitignore  Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json  tailwind.config.js
.github/workflows/: lint.yml
js/: imp.js
public/css/: out.css
src/: app.rs  bindings.rs  main.rs  utils.rs
