[package]
name = "cashu-lnurl-signup"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["yew", "trunk", "nostr", "cashu"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
anyhow = "1.0.70"
futures = "0.3.28"
log = "0.4.17"
nostr-sdk = { version = "0.22", features = ["nip04"] } 
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features=["Clipboard", "Navigator"] }
yew = { version = "0.20", features = ["csr"] }
tokio = { version = "1", default_features = false, features=["sync", "rt"]} 
gloo = "0.8.0"
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
once_cell = "1.18.0"
